# Shape

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CPPLINT.cfg  Doxyfile  LICENSE.txt  README.md  app.py  check-doxygen.sh  defaults.cfg  mypy.ini  precommit_output.txt  pyproject.toml  readme.md  requirements.txt  results.pstats  ruff.toml  uncrustify.cfg
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
.streamlit/: config.toml
data/csv/: ANSURIIFEMALEPublic.csv
data/json/: custom_crowd_example.json
data/pkl/: bike_data.pkl  female_3dBody_light.pkl  male_3dBody_light.pkl
data/xml/: custom_crowd_example.xml
data/xml/crowd2D_ANSURII_tutorial/: AgentDynamics.xml  Agents.xml  Geometry.xml
data/xml/crowd_ANSURII/: AgentDynamics.xml  Agents.xml  Geometry.xml  Materials.xml
data/xml/crowd_ANSURII_tutorial/: AgentDynamics.xml  Agents.xml  Geometry.xml  Materials.xml
docs/: Doxyfile
docs/docs/source/: modules.rst  src.rst  src.shapes_package.classes.rst  src.shapes_package.datafactory.rst  src.shapes_package.tabs.rst
docs/doxy_files/xml/: Doxyfile.xml  _agent_8cpp.xml  _agent_8cpp_8o_8d.xml  _agent_8h.xml  _c_make_c_compiler_id_8c.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _crowd_8cpp.xml  _crowd_8cpp_8o_8d.xml  _crowd_8h.xml  _crowd_mechanics_8h.xml  _global_8cpp.xml  _global_8cpp_8o_8d.xml  _global_8h.xml  _input_static_8cpp.xml  _input_static_8cpp_8o_8d.xml  _input_static_8h.xml  _main_8cpp.xml  _main_8cpp_8o_8d.xml  array_8h.xml  (+24 more)
docs/source/: app.rst  conf.py  config_files_tutorials.rst  configuration.backup.rst  configuration.data.rst  configuration.models.rst  configuration.rst  configuration.utils.rst  create2Dped.nblink  create3Dped.nblink  create_crowd_ANSURII.nblink  create_crowd_custom_statistics.nblink  export_to_ChAOS.nblink  index.rst  install_mechanical_layer.md  installation.rst  mechanical_layer.rst  mechanical_layer_tutorials.rst  modules.rst  modules_config_files.rst  read_ANSURII_database.nblink  read_configuration_files.nblink  read_database.nblink  run_app_locally.rst  run_mechanical_layer.md  run_minimal_example.md  shapes.datafactory.rst  shapes.docs.rst  shapes.rst  shapes.tabs.rst  shapes.ui.rst  shapes.utils.rst  source.rst  src.classes.rst  src.docs.rst  src.plotting.rst  src.rst  src.shapes_package.docs.rst  src.shapes_package.rst  src.shapes_package.ui.rst  (+19 more)
old/: conf.py
old/10 avril/: configuration.data.rst  configuration.models.rst  configuration.rst  configuration.utils.rst  index.rst  streamlit_app.app.rst  streamlit_app.plot.rst  streamlit_app.rst  streamlit_app.tabs.rst  streamlit_app.utils.rst
old/old_important_docs/: create_crowd_ANSURII.nblink  index.rst  installation.rst  modules_config_files.rst  read_database.nblink  source.rst  tutorials_config_files.rst
old/old_package/: shapes.classes.rst  shapes.datafactory.rst  shapes.plotting.rst
src/: __init__.py  anthropometry.py  app.py  crowd.py  pedestrian.py  plot.py  test.py
src/classes/: __init__.py  agents.py  crowd.py  initial_agents.py  measures.py  pedestrian.py  shapes2D.py  shapes3D.py
src/configuration/: __init__.py
src/datafactory/: datafactory.py
src/docs/: __init__.py  docs.py
src/mechanical_layer/: CMakeLists.txt  test_pre_commit.cpp  try.cpp
src/mechanical_layer/include/: Agent.h  Crowd.h  CrowdMechanics.h  Global.h  InputStatic.h  MechanicalLayer.h
src/mechanical_layer/src/: Agent.cpp  Crowd.cpp  Global.cpp  InputStatic.cpp  Main.cpp  MechanicalLayer.cpp
src/plotting/: __init__.py  plot.py
src/shapes/: __init__.py
src/shapes_package/: __init__.py
src/tabs/: __init__.py  agent2D_tab.py  anthropometry_tab.py  crowd_tab.py  custom_crowd.py  custom_crowd_tab.py  pedestrian2D_tab.py  pedestrian3D_tab.py
src/ui/: ui.py
src/utils/: __init__.py  constants.py  functions.py  logging_custom.py  typing_custom.py
tests/: .coverage  test_boundaries.py  test_dynamic.py  test_materials.py  test_measuring_agent.py  test_rotation.py  test_static.py  test_todo.txt  test_translation.py  test_zip.py
tests/configuration/: test_backup_boundaries.py  test_backup_dynamic.py  test_backup_interactions.py  test_backup_materials.py  test_backup_static.py  test_backup_zip.py  test_compute_bideltoid_breadth_from_multipolygon.py  test_compute_chest_depth_from_multipolygon.py  test_compute_moment_of_inertia.py  test_crowd_with_custom_statistics.py  test_from_string_to_tuple.py  test_measuring_agent.py  test_rotate_vectors.py  test_rotation.py  test_translation.py  test_wrap_angle.py
tests/mechanical_layer/: Parameters.xml  ScenarioGUI.py  ScenarioGUI.txt  ScenarioGUI_mypy_correction.py  create_scenario_anisotropic.py  instructions.md
tests/shapes_configuration/: output_boundaries_one_wall.xml  output_boundaries_two_walls.xml  test_boundaries.py  test_compute_bideltoid_breadth_from_multipolygon.py  test_compute_chest_depth_from_multipolygon.py  test_compute_moment_of_inertia.py  test_crowd_with_custom_statistics.py  test_from_string_to_tuple.py  test_measuring_agent.py  test_rotate_vectors.py  test_rotation.py  test_wrap_angle.py  test_zip.py
trial/: crowd_old.txt  interesting_fun.txt
tutorials/mechanical_layer/: AgentDynamics input t=0.5.xml  Parameters.xml  Run.md  minimal_example.ipynb  multiple_runs.ipynb  multiple_runs.txt  run_mechanical_layer.py
tutorials/shapes/: create2Dped.ipynb  create3Dped.ipynb  create_crowd_ANSURII.ipynb  create_crowd_custom_statistics.ipynb  read_configuration_files.ipynb  read_database.ipynb
tutorials/shapes_configuration/: create2Dped.ipynb  create3Dped.ipynb  create_crowd_ANSURII.ipynb  create_crowd_custom_statistics.ipynb  export_to_CHAOS.ipynb  read_ANSURII_database.ipynb  read_configuration_files.ipynb  read_database.ipynb
ui/: ui.py
utils/: constants.py  functions.py
(+283 files in other folders)
