[project]
name = "shapes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmcrameri>=1.9",
    "dicttoxml>=1.7.16",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "myst-parser>=4.0.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyvista>=0.44.1",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-mdinclude>=0.6.2",
    "streamlit>=1.43.0",
    "streamlit-option-menu>=0.4.0",
    "watchdog>=6.0.0",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.1.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "mypy>=1.15.0",            # Static type checker
    "ruff>=0.9.9",             # Linter and formatter
    "pre-commit>=4.1.0",       # Pre-commit framework
    "nbsphinx>=0.9.6",
    "nbsphinx-link>=1.3.1",
    "myst-nb>=1.2.0",
    "numpydoc>=1.8.0",
]

[build-system]
requires = ["setuptools", "wheel", "pandoc"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
override_SS05 = [ # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
