[project]
name = "shapes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "breathe>=4.36.0",
    "cmcrameri>=1.9",
    "codespell>=2.4.1",
    "dicttoxml>=1.7.16",
    "exhale>=0.3.7",
    "gprof2dot>=2025.4.14",
    "jupyter>=1.1.1",
    "kivy>=2.3.1",
    "matplotlib>=3.10.3",
    "mypy>=1.15.0",
    "myst-parser>=4.0.1",
    "nbsphinx>=0.9.6",
    "nbsphinx-link>=1.3.1",
    "numpy>=2.2.6",
    "numpydoc>=1.8.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=6.1.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyvista>=0.45.2",
    "ruff>=0.11.10",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-mdinclude>=0.6.2",
    "sphinx-rtd-theme>=3.0.2",
    "streamlit>=1.45.1",
    "streamlit-option-menu>=0.4.0",
    "watchdog>=6.0.0",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools", "wheel", "pandoc"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
override_SS05 = [ # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
